@@ -25,7 +25,7 @@ int						camd_tcp_connect	(struct in_addr ip, int port);
 struct camd_msg *		camd_msg_alloc		(enum msg_type msg_type, uint16_t ca_id, uint16_t service_id, uint8_t *data, uint8_t data_len);
 void					camd_msg_free   	(struct camd_msg **pmsg);
 
-void					camd_set_cw			(struct ts *ts, unsigned char *new_cw);
+void					camd_set_cw			(struct ts *ts, unsigned char *new_cw, int check_validity);
 
 void					camd_start			(struct ts *ts);
 void					camd_stop			(struct ts *ts);
